external-crates/move/crates/move-compiler/tests/move_check/expansion/use_spec_schema.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/use_spec_schema.move:3:5
  │
3 │     spec schema Foo<T> {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E03003]: unbound module member
   ┌─ tests/move_check/expansion/use_spec_schema.move:13:18
   │
 2 │ module X {
   │        - Module '0x2::X' declared here
   ·
13 │     use 0x2::X::{Foo, Bar as Baz};
   │                  ^^^ Invalid 'use'. Unbound member 'Foo' in module '0x2::X'

error[E03003]: unbound module member
   ┌─ tests/move_check/expansion/use_spec_schema.move:13:23
   │
 2 │ module X {
   │        - Module '0x2::X' declared here
   ·
13 │     use 0x2::X::{Foo, Bar as Baz};
   │                       ^^^ Invalid 'use'. Unbound member 'Bar' in module '0x2::X'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/use_spec_schema.move:18:5
   │
18 │     spec t {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

